Fix positioning of the scrollbar thumb when going back to the previous page, using native scrollbars on Mac.  Bug 201815, r=pinkerton, sr=sfraser.